--- a/10_fifth_model_implementation.ipynb
+++ b/10_fifth_model_implementation.ipynb
@@ -1355,108 +1355,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CCPartialOrder:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        base_classifier: Any,\n",
-    "        threshold: float = 0.5,\n",
-    "        num_generations: int = 5,\n",
-    "        random_state: Optional[int] = None\n",
-    "    ) -> None:\n",
-    "        self.base_classifier = base_classifier\n",
-    "        self.threshold = threshold\n",
-    "        self.num_generations = num_generations\n",
-    "\n",
-    "        if random_state is None:\n",
-    "            self.random_state = np.random.randint(0, 1000)\n",
-    "        else:\n",
-    "            self.random_state = random_state\n",
-    "\n",
-    "        self.conditional_entropies = None\n",
-    "    \n",
-    "    def fit(self, X: Any, y: Any):\n",
-    "        self.conditional_entropies = calculate_conditional_entropies(y)\n",
-    "        self.mutual_information = calculate_mutual_information(y)\n",
-    "        \n",
-    "        label_count = y.shape[1]\n",
-    "        label_space = np.arange(label_count)\n",
-    "        solutions_per_population = 50\n",
-    "\n",
-    "        ga_model = pygad.GA( #type:ignore\n",
-    "            gene_type=int,\n",
-    "            gene_space=label_space,\n",
-    "            random_seed=self.random_state,\n",
-    "            save_best_solutions=False,\n",
-    "            fitness_func=self.model_fitness_func,\n",
-    "            allow_duplicate_genes=False, # very important, otherwise we will have duplicate labels in the ordering\n",
-    "            num_genes=label_count,\n",
-    "\n",
-    "            # set up\n",
-    "            num_generations=self.num_generations,\n",
-    "            sol_per_pop=solutions_per_population,\n",
-    "\n",
-    "            # following what the article describes\n",
-    "            keep_elitism=5,\n",
-    "            parent_selection_type=\"rws\",\n",
-    "            num_parents_mating=2,\n",
-    "            crossover_probability=0.9,\n",
-    "            crossover_type=\"two_points\",\n",
-    "            mutation_type=\"swap\",\n",
-    "            mutation_probability=0.01,\n",
-    "        )\n",
-    "\n",
-    "        ga_model.run()\n",
-    "        \n",
-    "        solution, _, _ = ga_model.best_solution()\n",
-    "\n",
-    "        self.partial_order = build_partial_orders(solution, self.mutual_information, self.threshold)\n",
-    "\n",
-    "        self.partial_classifier_chains = {}\n",
-    "\n",
-    "        for label, partial_order in self.partial_order.items():\n",
-    "            classifier_chain = FixedClassifierChain(\n",
-    "                base_classifier=copy.deepcopy(self.base_classifier),\n",
-    "                order=partial_order,\n",
-    "            )\n",
-    "\n",
-    "            specific_y = y[:, partial_order].todense()\n",
-    "\n",
-    "            classifier_chain.fit(X, specific_y)\n",
-    "\n",
-    "            self.partial_classifier_chains[label] = classifier_chain\n",
-    "\n",
-    "        best_classifier = FixedClassifierChain(\n",
-    "            base_classifier=copy.deepcopy(self.base_classifier),\n",
-    "            order=solution,\n",
-    "        )\n",
-    "\n",
-    "        best_classifier.fit(X, y)\n",
-    "\n",
-    "        self.best_classifier = best_classifier\n",
-    "    \n",
-    "    def model_fitness_func(self, ga_instance: Any, solution: Any, solution_idx: Any) -> float:\n",
-    "        return self.test_solution(solution)\n",
-    "\n",
-    "    def test_solution(self, label_order: List[int]) -> float:\n",
-    "        if self.conditional_entropies is None:\n",
-    "            raise Exception(\"probabilities and entropies must be calculated before testing a solution\")\n",
-    "        \n",
-    "        lop_matrix = build_lop_matrix(label_order, self.conditional_entropies)\n",
-    "        return calculate_lop(lop_matrix)\n",
-    "    \n",
-    "    def predict(self, X: Any) -> Any:\n",
-    "        if self.best_classifier is None:\n",
-    "            raise Exception(\"model was not trained yet\")\n",
-    "\n",
-    "        return self.best_classifier.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 171,
    "metadata": {},
    "outputs": [
@@ -1634,9 +1532,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class CCPartialOrder:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        base_classifier: Any,\n",
+    "        threshold: float = 0.5,\n",
+    "        num_generations: int = 5,\n",
+    "        random_state: Optional[int] = None\n",
+    "    ) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.threshold = threshold\n",
+    "        self.num_generations = num_generations\n",
+    "\n",
+    "        if random_state is None:\n",
+    "            self.random_state = np.random.randint(0, 1000)\n",
+    "        else:\n",
+    "            self.random_state = random_state\n",
+    "\n",
+    "        self.conditional_entropies = None\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.conditional_entropies = calculate_conditional_entropies(y)\n",
+    "        self.mutual_information = calculate_mutual_information(y)\n",
+    "        \n",
+    "        label_count = y.shape[1]\n",
+    "        label_space = np.arange(label_count)\n",
+    "        solutions_per_population = 50\n",
+    "\n",
+    "        ga_model = pygad.GA( #type:ignore\n",
+    "            gene_type=int,\n",
+    "            gene_space=label_space,\n",
+    "            random_seed=self.random_state,\n",
+    "            save_best_solutions=False,\n",
+    "            fitness_func=self.model_fitness_func,\n",
+    "            allow_duplicate_genes=False, # very important, otherwise we will have duplicate labels in the ordering\n",
+    "            num_genes=label_count,\n",
+    "\n",
+    "            # set up\n",
+    "            num_generations=self.num_generations,\n",
+    "            sol_per_pop=solutions_per_population,\n",
+    "\n",
+    "            # following what the article describes\n",
+    "            keep_elitism=5,\n",
+    "            parent_selection_type=\"rws\",\n",
+    "            num_parents_mating=2,\n",
+    "            crossover_probability=0.9,\n",
+    "            crossover_type=\"two_points\",\n",
+    "            mutation_type=\"swap\",\n",
+    "            mutation_probability=0.01,\n",
+    "        )\n",
+    "\n",
+    "        ga_model.run()\n",
+    "        \n",
+    "        solution, _, _ = ga_model.best_solution()\n",
+    "\n",
+    "        partial_order = build_partial_orders(solution, self.mutual_information, self.threshold)\n",
+    "\n",
+    "        best_classifier = FixedClassifierChainWithPartial(\n",
+    "            base_classifier=copy.deepcopy(self.base_classifier),\n",
+    "            order=solution,\n",
+    "            partial_orders=partial_order\n",
+    "        )\n",
+    "\n",
+    "        best_classifier.fit(X, y)\n",
+    "\n",
+    "        self.best_classifier = best_classifier\n",
+    "    \n",
+    "    def model_fitness_func(self, ga_instance: Any, solution: Any, solution_idx: Any) -> float:\n",
+    "        return self.test_solution(solution)\n",
+    "\n",
+    "    def test_solution(self, label_order: List[int]) -> float:\n",
+    "        if self.conditional_entropies is None:\n",
+    "            raise Exception(\"probabilities and entropies must be calculated before testing a solution\")\n",
+    "        \n",
+    "        lop_matrix = build_lop_matrix(label_order, self.conditional_entropies)\n",
+    "        return calculate_lop(lop_matrix)\n",
+    "    \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        if self.best_classifier is None:\n",
+    "            raise Exception(\"model was not trained yet\")\n",
+    "\n",
+    "        return self.best_classifier.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "will start training for label 1\n",
+      "input size is (1211, 294)\n",
+      "finished training for label 1\n",
+      "will start training for label 2\n",
+      "input size is (1211, 295)\n",
+      "finished training for label 2\n",
+      "will start training for label 3\n",
+      "input size is (1211, 296)\n",
+      "finished training for label 3\n",
+      "will start training for label 5\n",
+      "input size is (1211, 297)\n",
+      "finished training for label 5\n",
+      "will start training for label 0\n",
+      "input size is (1211, 298)\n",
+      "finished training for label 0\n",
+      "will start training for label 4\n",
+      "input size is (1211, 298)\n",
+      "finished training for label 4\n",
+      "(partial_lop) hamming loss: 0.0898829431438127\n",
+      "(partial_lop) f1 score: 0.6878812182022297\n"
+     ]
+    }
+   ],
+   "source": [
+    "partial_lop = CCPartialOrder(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    threshold=0.01,\n",
+    "    num_generations=25,\n",
+    "    random_state=42,\n",
+    "    )\n",
+    "\n",
+    "partial_lop.fit(X, y)\n",
+    "partial_lop_preds = partial_lop.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, partial_lop_preds)\n",
+    "f1_score = metrics.f1_score(y_test, partial_lop_preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"(partial_lop) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(partial_lop) f1 score: {f1_score}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10.10. Conclusion\n",
+    "\n",
+    "Aaaaaaand we have a fifth model done!\n",
+    "\n",
+    "Now it is all about adding to a Python file of its own and then then adding unit tests.\n",
+    "\n",
+    "**Something to mention here is that the paper is _not_ so clear about how it achieves the partial orderings**. The pseudo-code provided is very simplistic considering what it wants to achieve. I had to read the paper several times to understand what it was doing, and even so I cannot confidently say that I implemented it 100% according to the paper.\n",
+    "\n",
+    "Still, the results are ok, the logic makes sense and the code is not too complex. I am happy with this model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
