--- a/notebooks/4_second_model_actual_implementation.ipynb
+++ b/notebooks/4_second_model_actual_implementation.ipynb
@@ -11,18 +11,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from support import CalculateLabelsCorrelationWithFTest\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lib.evaluation'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-b0e07e6ad134>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msupport\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCalculateLabelsCorrelationWithFTest\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mevaluation\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEvaluationPipeline\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lib.evaluation'"
+     ]
+    }
+   ],
+   "source": [
     "from skmultilearn.dataset import load_dataset\n",
     "from typing import Any\n",
     "import numpy as np\n",
     "from skmultilearn.problem_transform import ClassifierChain\n",
     "from skmultilearn.base import MLClassifierBase\n",
     "from sklearn.svm import SVC\n",
-    "from evaluation import EvaluationPipeline"
+    "\n",
+    "from lib.support import CalculateLabelsCorrelationWithFTest\n",
+    "from lib.evaluation import EvaluationPipeline"
    ]
   },
   {
@@ -195,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
