moves more notebooks

--- a/notebooks/5_exploring_genetic_algorithms.ipynb
+++ b/notebooks/5_exploring_genetic_algorithms.ipynb
@@ -26,12 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygad\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from skmultilearn.problem_transform import ClassifierChain\n",
+    "from skmultilearn.dataset import load_dataset\n",
+    "from sklearn.svm import SVC\n",
+    "from typing import List, Any, Dict\n",
+    "import sklearn.metrics as metrics\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_selection import f_classif"
    ]
   },
   {
@@ -205,22 +213,6 @@
     "## 5.3. Doing the model\n",
     "\n",
     "Ok, the code seems simple enough. Let's try to implement it in our model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skmultilearn.problem_transform import ClassifierChain\n",
-    "from skmultilearn.dataset import load_dataset\n",
-    "from sklearn.svm import SVC\n",
-    "from typing import List, Any, Dict\n",
-    "import numpy as np\n",
-    "import sklearn.metrics as metrics\n",
-    "import pandas as pd\n",
-    "from sklearn.feature_selection import f_classif\n"
    ]
   },
   {
