--- a/notebooks/7_getting_metrics_for_the_first_model.ipynb
+++ b/notebooks/7_getting_metrics_for_the_first_model.ipynb
@@ -32,6 +32,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from skmultilearn.problem_transform import BinaryRelevance\n",
     "from skmultilearn.dataset import load_dataset, available_data_sets\n",
     "from sklearn.svm import SVC\n",
@@ -42,7 +56,8 @@
     "import json\n",
     "import pandas as pd\n",
     "from sklearn.feature_selection import f_classif\n",
-    "from evaluation import EvaluationPipeline\n"
+    "\n",
+    "from lib.evaluation import EvaluationPipeline\n"
    ]
   },
   {
