moves more file

--- a/notebooks/8_debugging_the_basic_stacking_model.ipynb
+++ b/notebooks/8_debugging_the_basic_stacking_model.ipynb
@@ -20,7 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +48,11 @@
     "import json\n",
     "import pandas as pd\n",
     "from sklearn.feature_selection import f_classif\n",
-    "from evaluation import EvaluationPipeline\n",
     "from sklearn.ensemble import StackingClassifier, RandomForestClassifier\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
-    "import copy"
+    "import copy\n",
+    "\n",
+    "from lib.evaluation import EvaluationPipeline"
    ]
   },
   {
