adds fourth model to file of its own

--- a/notebooks/10_fifth_model_implementation.ipynb
+++ b/notebooks/10_fifth_model_implementation.ipynb
@@ -37,7 +37,9 @@
     "from typing import Dict\n",
     "import pandas as pd\n",
     "from typing import cast\n",
-    "import logging\n"
+    "import logging\n",
+    "\n",
+    "from pyitlib import discrete_random_variable as drv\n"
    ]
   },
   {
@@ -479,16 +481,6 @@
    ],
    "source": [
     "!pip install pyitlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from pyitlib import discrete_random_variable as drv"
    ]
   },
   {
