--- a/notebooks/08_debugging_the_basic_stacking_model.ipynb
+++ b/notebooks/08_debugging_the_basic_stacking_model.ipynb
@@ -2215,7 +2215,7 @@
     "\n",
     "After all the tests that were conducted, what can we conclude?\n",
     "\n",
-    "The main question posed at the beginning of this notebook was: why the `BasicStacking` is producing the same results as the `BinaryRelevance` model? This is now answered: **because I was using `SVC` as the base classifier and, for some reason, it produces the same results regardless of the `random_state` and regardless of the data getting extra features** (the labels from the first layer). By changing to any other classifier, such as the `RandomForestClassifier`, it was possible to get different results and notice a difference between the `BinaryRelevance` and the `BasicStacking`.\n",
+    "The main question posed at the beginning of this notebook was: why is the `BasicStacking` producing the same results as the `BinaryRelevance` model? This is now answered: **because I was using `SVC` as the base classifier and, for some reason, it produces the same results regardless of the `random_state` and regardless of the data getting extra features** (the labels from the first layer). By changing to any other classifier, such as the `RandomForestClassifier`, it was possible to get different results and notice a difference between the `BinaryRelevance` and the `BasicStacking`.\n",
     "\n",
     "Other nice thing achieved here:\n",
     "* A better implementation of `BasicStacking`.\n",
