--- a/notebooks/07_getting_metrics_for_the_first_model.ipynb
+++ b/notebooks/07_getting_metrics_for_the_first_model.ipynb
@@ -73,8 +73,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: move this to an actual python file\n",
-    "\n",
     "class BasicStacking(ProblemTransformationBase):\n",
     "    first_layer_classifiers: BinaryRelevance\n",
     "    second_layer_classifiers: BinaryRelevance\n",
@@ -112,8 +110,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO move this to an actual python file\n",
-    "\n",
     "class StackingWithFTests(ProblemTransformationBase):\n",
     "    alpha: float\n",
     "    use_first_layer_to_calculate_correlations: bool\n",
@@ -381,15 +377,6 @@
     "    \"stacking_with_f_tests_model\": stacking_with_f_tests_model\n",
     "}\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluation_results = {}\n"
    ]
   },
   {
@@ -1035,6 +1022,8 @@
     }
    ],
    "source": [
+    "evaluation_results = {}\n",
+    "\n",
     "for model_name, model in models.items():\n",
     "    print(f\"# running model `{model_name}`\")\n",
     "\n",
