creates metrics package

--- a/notebooks/04_second_model_actual_implementation.ipynb
+++ b/notebooks/04_second_model_actual_implementation.ipynb
@@ -37,7 +37,7 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "from lib.support import CalculateLabelsCorrelationWithFTest\n",
-    "from lib.evaluation import EvaluationPipeline"
+    "from metrics.evaluation import EvaluationPipeline"
    ]
   },
   {
