--- a/notebooks/07_getting_metrics_for_the_first_model.ipynb
+++ b/notebooks/07_getting_metrics_for_the_first_model.ipynb
@@ -57,7 +57,7 @@
     "import pandas as pd\n",
     "from sklearn.feature_selection import f_classif\n",
     "\n",
-    "from lib.evaluation import EvaluationPipeline\n"
+    "from metrics.evaluation import EvaluationPipeline\n"
    ]
   },
   {
