--- a/notebooks/08_debugging_the_basic_stacking_model.ipynb
+++ b/notebooks/08_debugging_the_basic_stacking_model.ipynb
@@ -52,7 +52,7 @@
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "import copy\n",
     "\n",
-    "from lib.evaluation import EvaluationPipeline"
+    "from metrics.evaluation import EvaluationPipeline"
    ]
   },
   {
