--- a/notebooks/11_finding_a_stable_base_classifier.ipynb
+++ b/notebooks/11_finding_a_stable_base_classifier.ipynb
@@ -160,7 +160,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_regular_order(model):\n",
+    "    br_model = BinaryRelevance(\n",
+    "        classifier=model,\n",
+    "        require_dense=[False, True]\n",
+    "    )\n",
+    "\n",
+    "    br_model.fit(X_train, y_train)\n",
+    "    predictions = br_model.predict(X_test)\n",
+    "\n",
+    "    print(\"accuracy\")\n",
+    "    print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "    print(\"hamming loss\")\n",
+    "    print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "    print(\"f1 score\")\n",
+    "    print(metrics.f1_score(y_test, predictions, average=\"macro\"))\n",
+    "\n",
+    "def run_shuffled_order(model):\n",
+    "    br_model = BinaryRelevance(\n",
+    "        classifier=model,\n",
+    "        require_dense=[False, True]\n",
+    "    )\n",
+    "\n",
+    "    br_model.fit(shuffled_X_train, y_train)\n",
+    "    predictions = br_model.predict(shuffled_X_test)\n",
+    "\n",
+    "    print(\"accuracy\")\n",
+    "    print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "    print(\"hamming loss\")\n",
+    "    print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "    print(\"f1 score\")\n",
+    "    print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -177,56 +220,47 @@
     }
    ],
    "source": [
-    "# knn\n",
+    "run_regular_order(KNeighborsClassifier())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.596989966555184\n",
+      "hamming loss\n",
+      "0.10451505016722408\n",
+      "f1 score\n",
+      "0.6809836443612469\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_shuffled_order(KNeighborsClassifier())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random forest classifier\n",
     "# regular order\n",
     "\n",
     "knn_model = BinaryRelevance(\n",
-    "    classifier=KNeighborsClassifier(),\n",
+    "    classifier=RandomForestClassifier(),\n",
     "    require_dense=[False, True]\n",
     ")\n",
     "\n",
     "knn_model.fit(X_train, y_train)\n",
     "predictions = knn_model.predict(X_test)\n",
-    "\n",
-    "print(\"accuracy\")\n",
-    "print(metrics.accuracy_score(y_test, predictions))\n",
-    "\n",
-    "print(\"hamming loss\")\n",
-    "print(metrics.hamming_loss(y_test, predictions))\n",
-    "\n",
-    "print(\"f1 score\")\n",
-    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy\n",
-      "0.596989966555184\n",
-      "hamming loss\n",
-      "0.10451505016722408\n",
-      "f1 score\n",
-      "0.6809836443612469\n"
-     ]
-    }
-   ],
-   "source": [
-    "# knn\n",
-    "# shuffled order\n",
-    "\n",
-    "knn_model = BinaryRelevance(\n",
-    "    classifier=KNeighborsClassifier(),\n",
-    "    require_dense=[False, True]\n",
-    ")\n",
-    "\n",
-    "knn_model.fit(shuffled_X_train, y_train)\n",
-    "predictions = knn_model.predict(shuffled_X_test)\n",
     "\n",
     "print(\"accuracy\")\n",
     "print(metrics.accuracy_score(y_test, predictions))\n",
