adds context text

--- a/notebooks/11_finding_a_stable_base_classifier.ipynb
+++ b/notebooks/11_finding_a_stable_base_classifier.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 11. Finding a stable base classifier\n",
+    "\n",
+    "## 11.1. Context\n",
+    "\n",
+    "All multi label classifiers require a base classifier, which is a regular binary classifier.\n",
+    "\n",
+    "Throughout the development of this project, however, is was noted that some of these regular binary classifier present specific behaviors:\n",
+    "* The `SVC`, as shown in the notebook `8` (in which I debugged why the basic stacking was no different to the regular Binary Relevance, in spite of using more features), is **apparently insensitive to additional features** (these features being the predicted labels) and also **insensitive to different random states**.\n",
+    "  * This makes it not suitable as the `SVC` ends up **discarding any information regarding label correlations**.\n",
+    "  * Also, since changing the random state makes no different, it is probable that the base classifier is getting to some kind of **local minimum**.\n",
+    "    * Perhaps tunning the parameters of the `SVC` can solve this. However, this is not the focus of this project. I much prefer to have a very basic base classifier that works out-of-the-box.\n",
+    "* The `RandomForestClassifier` is **sensitive to the order of the columns** in the input dataset (as explained [here](https://github.com/scikit-learn/scikit-learn/issues/5394)).\n",
+    "  * This makes it not suitable as results obtained via `RandomForestClassifier` might not be \"trusted\".\n",
+    "  * The multilabel models being studied here are interesting, but none of them are _ground breaking_. They represent **modest improvements** by leveraging label correlations.\n",
+    "  * Since the improvements are small, we must be certain that they are _not_ related to the order of the columns in the input dataset.\n",
+    "  * The models based on `ClassifierChain` will **surely change the order of input columns** (at least for the columns that represent the predicted labels obtained from previous steps in the chain). Knowing that different orders will result in only modest improvements, it is important to have a base classifier that is not sensitive to the order of the columns.\n",
+    "* The `K-NearestNeighbors` might be a suitable base classifier, as it is usually fast to run. We just need to make sure that:\n",
+    "  * Different random states lead to different results.\n",
+    "  * It will not require specific tunning.\n",
+    "  * It is not sensitive to the order of the columns in the input dataset.\n",
+    "\n",
+    "This notebook aims at finding a suitable base classifier by testing and comparing the `SVC`, `RandomForestClassifier` and `K-NearestNeighbors`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.2. Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -38,6 +73,13 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "from skmultilearn.problem_transform import BinaryRelevance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.3. Datasets"
    ]
   },
   {
@@ -159,6 +201,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.4. Procedures"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -199,6 +248,22 @@
     "\n",
     "    print(\"f1 score\")\n",
     "    print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.5. Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.5.1. KNN\n",
+    "\n",
+    "Notice: KNN has **no** `random_state`, so we will only test the ordering of the columns."
    ]
   },
   {
@@ -246,30 +311,193 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# random forest classifier\n",
-    "# regular order\n",
-    "\n",
-    "knn_model = BinaryRelevance(\n",
-    "    classifier=RandomForestClassifier(),\n",
-    "    require_dense=[False, True]\n",
-    ")\n",
-    "\n",
-    "knn_model.fit(X_train, y_train)\n",
-    "predictions = knn_model.predict(X_test)\n",
-    "\n",
-    "print(\"accuracy\")\n",
-    "print(metrics.accuracy_score(y_test, predictions))\n",
-    "\n",
-    "print(\"hamming loss\")\n",
-    "print(metrics.hamming_loss(y_test, predictions))\n",
-    "\n",
-    "print(\"f1 score\")\n",
-    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+    "### 11.5.2. Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5367892976588629\n",
+      "hamming loss\n",
+      "0.08974358974358974\n",
+      "f1 score\n",
+      "0.684223851314326\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_regular_order(RandomForestClassifier(random_state=42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5225752508361204\n",
+      "hamming loss\n",
+      "0.09211259754738016\n",
+      "f1 score\n",
+      "0.673047351701591\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_regular_order(RandomForestClassifier(random_state=123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5359531772575251\n",
+      "hamming loss\n",
+      "0.09044035674470458\n",
+      "f1 score\n",
+      "0.682232461024746\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_shuffled_order(RandomForestClassifier(random_state=42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5367892976588629\n",
+      "hamming loss\n",
+      "0.09002229654403568\n",
+      "f1 score\n",
+      "0.6842674712540301\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_shuffled_order(RandomForestClassifier(random_state=123))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.5.3. SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5869565217391305\n",
+      "hamming loss\n",
+      "0.08416945373467112\n",
+      "f1 score\n",
+      "0.7237789962754925\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_regular_order(SVC(random_state=42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5869565217391305\n",
+      "hamming loss\n",
+      "0.08416945373467112\n",
+      "f1 score\n",
+      "0.7237789962754925\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_regular_order(SVC(random_state=123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5869565217391305\n",
+      "hamming loss\n",
+      "0.08416945373467112\n",
+      "f1 score\n",
+      "0.7237789962754925\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_shuffled_order(SVC(random_state=42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5869565217391305\n",
+      "hamming loss\n",
+      "0.08416945373467112\n",
+      "f1 score\n",
+      "0.7237789962754925\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_shuffled_order(SVC(random_state=123))"
    ]
   }
  ],
