--- a/notebooks/11_finding_a_stable_base_classifier.ipynb
+++ b/notebooks/11_finding_a_stable_base_classifier.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,9 @@
     "from metrics.evaluation import EvaluationPipeline\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "from skmultilearn.problem_transform import BinaryRelevance"
+    "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "\n",
+    "from lib.base_models import StackedGeneralization, DependantBinaryRelevance"
    ]
   },
   {
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,13 +174,19 @@
     {
      "data": {
       "text/plain": [
-       "matrix([[0.13679 , 0.354982, 0.58803 , ..., 0.124623, 0.327473, 0.204866],\n",
-       "        [0.234595, 0.303399, 0.638408, ..., 0.231433, 0.347137, 0.019469],\n",
-       "        [0.284239, 0.00346 , 0.726349, ..., 0.292222, 0.025036, 0.011205],\n",
+       "matrix([[1.22000e-04, 1.44418e-01, 9.40810e-02, ..., 6.85047e-01,\n",
+       "         2.36605e-01, 4.77202e-01],\n",
+       "        [1.60470e-02, 4.07510e-02, 2.85809e-01, ..., 7.61053e-01,\n",
+       "         3.66136e-01, 4.49931e-01],\n",
+       "        [7.93500e-03, 1.31860e-02, 2.91597e-01, ..., 7.61820e-01,\n",
+       "         1.96590e-01, 4.50110e-01],\n",
        "        ...,\n",
-       "        [0.34684 , 0.040355, 0.47558 , ..., 0.343549, 0.073848, 0.004937],\n",
-       "        [0.153156, 0.151438, 0.561282, ..., 0.129029, 0.272418, 0.02801 ],\n",
-       "        [0.195887, 0.164443, 0.496182, ..., 0.201372, 0.150776, 0.10174 ]])"
+       "        [1.73600e-02, 8.09100e-03, 1.03240e-01, ..., 1.00000e+00,\n",
+       "         4.73331e-01, 3.59929e-01],\n",
+       "        [1.66000e-04, 3.98600e-03, 4.34940e-02, ..., 8.11438e-01,\n",
+       "         4.00372e-01, 3.29456e-01],\n",
+       "        [9.20880e-02, 1.26706e-01, 1.35640e-02, ..., 9.11177e-01,\n",
+       "         6.31460e-02, 4.25771e-01]])"
       ]
      },
      "metadata": {},
@@ -498,6 +506,128 @@
    ],
    "source": [
     "run_shuffled_order(SVC(random_state=123))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.6. Notes so far\n",
+    "\n",
+    "* `SVC` is **not** affected by the order of the columns, but it is also **not** affected by the random state, which is bad.\n",
+    "* `RandomForestClassifier` _is_ really affected by the order of the columns, which is bad.\n",
+    "* `KNN` is **not** affected by the order of the columns. We cannot test the random state. So let's run one final test inspired in the notebook `8`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.7. Testing the effects of using more features on KNN\n",
+    "\n",
+    "We must be certain that KNN will be sensible to adding label correlation information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_binary_relevance_model = BinaryRelevance(\n",
+    "    classifier=KNeighborsClassifier(),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "basic_stacking_model = StackedGeneralization(\n",
+    "    classifier=KNeighborsClassifier(),\n",
+    ")\n",
+    "\n",
+    "dbr = DependantBinaryRelevance(\n",
+    "    classifier=KNeighborsClassifier(),\n",
+    ")\n",
+    "\n",
+    "models = {\n",
+    "    \"baseline_binary_relevance_model\": baseline_binary_relevance_model,\n",
+    "    \"basic_stacking_model\": basic_stacking_model,\n",
+    "    \"dependant_binary_relevance\": dbr,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# running model `baseline_binary_relevance_model`\n",
+      "accuracy\n",
+      "0.596989966555184\n",
+      "hamming loss\n",
+      "0.10451505016722408\n",
+      "f1 score\n",
+      "0.6809836443612469\n",
+      "\n",
+      "# running model `basic_stacking_model`\n",
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: X_extended shape is (1211, 300)\n",
+      "accuracy\n",
+      "0.6078595317725752\n",
+      "hamming loss\n",
+      "0.10451505016722408\n",
+      "f1 score\n",
+      "0.6860946721513695\n",
+      "\n",
+      "# running model `dependant_binary_relevance`\n",
+      "FIT: X shape is (1211, 294)\n",
+      "FIT: X_extended shape, for label 0, is (1211, 299)\n",
+      "FIT: X_extended shape, for label 1, is (1211, 299)\n",
+      "FIT: X_extended shape, for label 2, is (1211, 299)\n",
+      "FIT: X_extended shape, for label 3, is (1211, 299)\n",
+      "FIT: X_extended shape, for label 4, is (1211, 299)\n",
+      "FIT: X_extended shape, for label 5, is (1211, 299)\n",
+      "accuracy\n",
+      "0.6137123745819398\n",
+      "hamming loss\n",
+      "0.11259754738015608\n",
+      "f1 score\n",
+      "0.6913398386498302\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model_name, model in models.items():\n",
+    "    print(f\"# running model `{model_name}`\")\n",
+    "\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    predictions = model.predict(X_test)\n",
+    "\n",
+    "    print(\"accuracy\")\n",
+    "    print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "    print(\"hamming loss\")\n",
+    "    print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "    print(\"f1 score\")\n",
+    "    print(metrics.f1_score(y_test, predictions, average=\"macro\"))\n",
+    "\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.8. Conclusion\n",
+    "\n",
+    "The `KNN` base classifier showed to also be sensible to extra features, as using label correlations changed the performance metrics (fortunately, it improved them). This is great!\n",
+    "\n",
+    "**It will therefore be chosen as the base classifier for the multilabel models**."
    ]
   }
  ],
