adds test with ada boost

--- a/notebooks/11_finding_a_stable_base_classifier.ipynb
+++ b/notebooks/11_finding_a_stable_base_classifier.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,9 @@
     "\n",
     "from skmultilearn.problem_transform import BinaryRelevance\n",
     "\n",
-    "from lib.base_models import StackedGeneralization, DependantBinaryRelevance"
+    "from lib.base_models import StackedGeneralization, DependantBinaryRelevance\n",
+    "\n",
+    "from sklearn.ensemble import AdaBoostClassifier"
    ]
   },
   {
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,19 +176,13 @@
     {
      "data": {
       "text/plain": [
-       "matrix([[1.22000e-04, 1.44418e-01, 9.40810e-02, ..., 6.85047e-01,\n",
-       "         2.36605e-01, 4.77202e-01],\n",
-       "        [1.60470e-02, 4.07510e-02, 2.85809e-01, ..., 7.61053e-01,\n",
-       "         3.66136e-01, 4.49931e-01],\n",
-       "        [7.93500e-03, 1.31860e-02, 2.91597e-01, ..., 7.61820e-01,\n",
-       "         1.96590e-01, 4.50110e-01],\n",
+       "matrix([[0.0435  , 0.47715 , 0.067789, ..., 0.34692 , 0.357455, 0.3263  ],\n",
+       "        [0.034444, 0.354085, 0.132913, ..., 0.351561, 0.551358, 0.255651],\n",
+       "        [0.014923, 0.051372, 0.023752, ..., 0.215009, 0.453512, 0.030036],\n",
        "        ...,\n",
-       "        [1.73600e-02, 8.09100e-03, 1.03240e-01, ..., 1.00000e+00,\n",
-       "         4.73331e-01, 3.59929e-01],\n",
-       "        [1.66000e-04, 3.98600e-03, 4.34940e-02, ..., 8.11438e-01,\n",
-       "         4.00372e-01, 3.29456e-01],\n",
-       "        [9.20880e-02, 1.26706e-01, 1.35640e-02, ..., 9.11177e-01,\n",
-       "         6.31460e-02, 4.25771e-01]])"
+       "        [0.002886, 0.163771, 0.008913, ..., 0.503711, 0.35441 , 0.012993],\n",
+       "        [0.053771, 0.084461, 0.011059, ..., 0.229335, 0.257827, 0.390964],\n",
+       "        [0.009043, 0.086049, 0.021946, ..., 0.220879, 0.499739, 0.213046]])"
       ]
      },
      "metadata": {},
@@ -217,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,10 +508,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 11.5.4. AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5593645484949833\n",
+      "hamming loss\n",
+      "0.09643255295429208\n",
+      "f1 score\n",
+      "0.7210134000734447\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_regular_order(AdaBoostClassifier(random_state=42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5593645484949833\n",
+      "hamming loss\n",
+      "0.09643255295429208\n",
+      "f1 score\n",
+      "0.7210134000734447\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_regular_order(AdaBoostClassifier(random_state=123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5593645484949833\n",
+      "hamming loss\n",
+      "0.09643255295429208\n",
+      "f1 score\n",
+      "0.7210134000734447\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_shuffled_order(AdaBoostClassifier(random_state=42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5593645484949833\n",
+      "hamming loss\n",
+      "0.09643255295429208\n",
+      "f1 score\n",
+      "0.7210134000734447\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_shuffled_order(AdaBoostClassifier(random_state=123))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 11.6. Notes so far\n",
     "\n",
     "* `SVC` is **not** affected by the order of the columns, but it is also **not** affected by the random state, which is bad.\n",
     "* `RandomForestClassifier` _is_ really affected by the order of the columns, which is bad.\n",
+    "* `AdaBoost` is **not** affected by the order of the columns, but it is also **not** affected by the random state, which is bad.\n",
     "* `KNN` is **not** affected by the order of the columns. We cannot test the random state. So let's run one final test inspired in the notebook `8`."
    ]
   },
