--- a/notebooks/12_investigating_the_knn.ipynb
+++ b/notebooks/12_investigating_the_knn.ipynb
@@ -1683,7 +1683,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Baseline testing"
+    "## 12.3. Testing the KNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.1. Testing the KNN with the original data"
    ]
   },
   {
@@ -1818,7 +1825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing with normalization"
+    "### 12.3.2. Testing the KNN with normalization"
    ]
   },
   {
@@ -1953,7 +1960,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "### 12.3.3. Results so far\n",
     "\n",
     "**Good news: the metrics now change**. _Bad news: they change for the worse when we try to add a bit of label correlations_. It is probably worthy it to run a full metrics pipeline using normalized data.\n",
     "\n",
@@ -1963,12 +1970,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "RandomForestClassifier"
+    "## 12.4. Testing the `RandomForestClassifier`\n",
+    "\n",
+    "To have a comparison, let's test the `RandomForestClassifier` with the same data."
    ]
   }
  ],
